--- a/OOS/src/app/admin/admin-page/admin-page.component.html
+++ b/OOS/src/app/admin/admin-page/admin-page.component.html
@@ -20,12 +20,12 @@
               <div class="header-btns-icon">
                 <i class="fa fa-user-o"></i>
               </div>
-              <strong class="text-uppercase"> My Account
+              <strong class="text-uppercase"> Tài khoản
                 <i class="fa fa-caret-down"></i>
               </strong>
             </div>
-            <a routerLink="/account/login" class="text-uppercase">Login</a> /
-            <a class="text-uppercase" routerLink="/account/register">Join</a>
+            <a routerLink="/account/login" class="text-uppercase">Đăng nhập</a> /
+            <a class="text-uppercase" routerLink="/account/register">Đăng ký</a>
           </li>
           <!-- /Account -->
 
@@ -49,11 +49,11 @@
                   <i class="fa fa-caret-down"></i>
                 </strong>
             </div>
-            <span class="text-uppercase">Account</span>
+            <span class="text-uppercase">Tài khoản</span>
             <ul class="custom-menu">              
               <li>
                 <a (click)="logout()">
-                  <i class="fa fa-check"></i> Logout</a>
+                  <i class="fa fa-check"></i> Đăng xuất</a>
               </li>
             </ul>
           </li>
