--- a/OOS/src/app/admin/categories/overview-categories/overview-categories.component.html
+++ b/OOS/src/app/admin/categories/overview-categories/overview-categories.component.html
@@ -1,20 +1,20 @@
 <div class="col-md-12">
   <div class="section-title ">
-    <h3 class="title">Overview Categories</h3>
+    <h3 class="title">Tổng quan danh mục</h3>
   </div>
 
   <div class="pull-right">
     <div class="btn-group">
-      <a routerLink="../create" routerLinkActive="active" class="primary-btn">Create New</a>
+      <a routerLink="../create" routerLinkActive="active" class="primary-btn">Tạo</a>
     </div>
   </div>
 
   <table class="shopping-cart-table table table">
     <thead class="thead-dark">
       <tr>        
-        <th scope="col">Name</th>
-        <th scope="col">Description</th>
-        <th scope="col">Status</th>
+        <th scope="col">Tên</th>
+        <th scope="col">Chi tiết</th>
+        <th scope="col">Trạng thái</th>
         <th></th>
       </tr>
     </thead>
@@ -53,10 +53,10 @@
     <div class="modal-content">
       <div class="modal-body">
         <div class="section-title">
-          <h4 class="modal-title">Confirm</h4>
+          <h4 class="modal-title">Xác nhận</h4>
         </div>
         <p>
-          Are you sure to want to delele
+          Chắn chắn xoá không?
           <strong>{{cateDel.Name}}</strong> ?
         </p>
       </div>
