--- a/OOS/src/app/admin/customer-feedback/customer-feedback.component.html
+++ b/OOS/src/app/admin/customer-feedback/customer-feedback.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-12">
     <div class="section-title ">
-      <h3 class="title">Customer FeedBack</h3>
+      <h3 class="title">Phản hồi khách hàng</h3>
     </div>
  
     <table class="shopping-cart-table table table">
@@ -8,7 +8,7 @@
         <tr>        
           <th scope="col">ID</th>    
           <th scope="col">Email</th>
-          <th scope="col">Status</th>
+          <th scope="col">Trạng thái</th>
           <th></th>
         </tr>
       </thead>
@@ -46,10 +46,10 @@
       <div class="modal-content">
         <div class="modal-body">
           <div class="section-title">
-            <h4 class="modal-title">Confirm</h4>
+            <h4 class="modal-title">Xác nhận</h4>
           </div>
           <p>
-            Are you sure to want to delele?
+            Chắn chắn xoá không??
           </p>
         </div>
         <div class="modal-footer">
