--- a/OOS/src/app/shopping/account/login-account/login-account.component.html
+++ b/OOS/src/app/shopping/account/login-account/login-account.component.html
@@ -5,7 +5,7 @@
                 <!-- <h1 class="text-center login-title">Admin Login</h1> -->
                 <!-- <div class="account-wall"></div> -->
                 <div class="section-title">
-                    <h3 class="title">Login</h3>
+                    <h3 class="title">Đăng nhập</h3>
                 </div>
                 <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                     alt="">
