--- a/OOS/src/app/shopping/account/order-history/order-history.component.html
+++ b/OOS/src/app/shopping/account/order-history/order-history.component.html
@@ -1,17 +1,17 @@
 <div class="container">
   <br>
   <div class="section-title">
-    <h3 class="title">Orders History</h3>
+    <h3 class="title">Lịch sử đặt hàng</h3>
   </div>
 
   <table class="shopping-cart-table table table">
     <thead class="thead-dark">
       <tr>
-        <th>Order ID</th>
+        <th>ID đơn hàng</th>
         <!-- <th>Create Date</th> -->
-        <th >Created Date</th>
-        <th class="text-center">Total</th>
-        <th class="text-center">Status</th>
+        <th >Ngày đặt</th>
+        <th class="text-center">Tổng giá</th>
+        <th class="text-center">Trạng thái</th>
         <th></th>
       </tr>
     </thead>
