--- a/OOS/src/app/admin/admin-login/admin-login.component.html
+++ b/OOS/src/app/admin/admin-login/admin-login.component.html
@@ -4,7 +4,7 @@
             <!-- <h1 class="text-center login-title">Admin Login</h1> -->
             <!-- <div class="account-wall"></div> -->
             <div class="section-title">
-                <h3 class="title">Login</h3>
+                <h3 class="title">Đăng nhập</h3>
             </div>
             <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                 alt="">
@@ -16,14 +16,14 @@
                         <br/>
                         <input name="password" type="password" class="input" placeholder="Password" required [(ngModel)]="password">
                         <button class="primary-btn btn-block" [disabled]="!loginForm.valid" (click)="login()">
-                            Sign in
+                            Đăng nhập
                         </button>
     
                         <label class="checkbox pull-left shiftleft">
-                            <input name="remember" type="checkbox" value="remember-me" [(ngModel)]="remember"> Remember me
+                            <input name="remember" type="checkbox" value="remember-me" [(ngModel)]="remember"> Nhớ mật khẩu
                         </label>
     
-                        <a href="" class="pull-right need-help">Need help? </a>
+                        <a href="" class="pull-right need-help">Cần hỗ trợ? </a>
                         <span class="clearfix"></span>
                     </div>
                 </form>
