--- a/OOS/src/app/admin/categories/createcategory/createcategory.component.html
+++ b/OOS/src/app/admin/categories/createcategory/createcategory.component.html
@@ -3,11 +3,11 @@
         <form #createCategoryForm="ngForm">
 
             <div class="section-title">
-                    <h3 class="title">Create category</h3>
+                    <h3 class="title">Tạo danh mục</h3>
                 </div>
                 <div class="form-group">
         
-                    Name:
+                    Tên:
         
                     <input name="name" type="text" class="input" [(ngModel)]="name" 
                     #name_validation="ngModel" ngModel required minlength="3" maxlength="25">
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form-group">
         
-                    Description:
+                    Chi tiết:
         
                     <input name="description" type="text" class="input" [(ngModel)]="description"
                     #description_validation="ngModel" ngModel maxlength="250">
@@ -26,7 +26,7 @@
                     <br/>
                 </div>
         
-                Status:
+                Trạng thái:
                 <div>
                     <select name="status1" class="input custom-select" [(ngModel)]="status1">
                         <option *ngFor="let item of keys" [value]="item">{{status[item]}}</option>
@@ -35,7 +35,7 @@
                 <br/>
 
                 <input type="button" (click)="addCategory()" [disabled]="!createCategoryForm.valid" class="primary-btn" value="Save">
-                <button routerLink='../' class="main-btn">Back</button>        
+                <button routerLink='../' class="main-btn">Trở lại</button>        
 
         </form>
     </div>
