--- a/OOS/src/app/admin/categories/editcategory/editcategory.component.html
+++ b/OOS/src/app/admin/categories/editcategory/editcategory.component.html
@@ -2,12 +2,12 @@
     <div class="billing-details">
         <form #editCategoryForm="ngForm">
             <div class="section-title">
-                <h3 class="title">Edit category</h3>
+                <h3 class="title">Sửa danh mục</h3>
             </div>
 
             <div class="form-group">
 
-                Name:
+                Tên:
 
                 <input name="name" type="text" class="input" [(ngModel)]="cate.Name" 
                 #name_validation="ngModel" ngModel required minlength="3" maxlength="25">
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group">
 
-                Description:
+                Chi tiết:
 
                 <input name="description" type="text" class="input" [(ngModel)]="cate.Description" 
                 #description_validation="ngModel" ngModel maxlength="250">
@@ -26,7 +26,7 @@
                 <br/>
             </div>
 
-            Status:
+            Trạng thái:
             <div>
                 <select name="status" class="input custom-select" [(ngModel)]="cate.Status">
                     <option *ngFor="let item of keys" [value]="item">{{status[item]}}</option>
@@ -38,7 +38,7 @@
 
             <br/>
             <input type="button" [disabled]="!editCategoryForm.valid" (click)="editCategory()" class="primary-btn" value="Save">
-            <button routerLink='../' class="main-btn">Back</button>
+            <button routerLink='../' class="main-btn">Trở lại</button>
             <br/>
             <br/>
         </form>
