--- a/OOS/src/app/admin/configuration/configuration.component.html
+++ b/OOS/src/app/admin/configuration/configuration.component.html
@@ -1,10 +1,10 @@
 <div class="col-md-12">
   <div class="section-title">
-    <h3 class="title">Configuration</h3>
+    <h3 class="title">CẤU HÌNH</h3>
   </div>
 
   <div class="section-title">
-    <h4 class="title">CURRENCY</h4>
+    <h4 class="title">TIỀN TỆ</h4>
   </div>
   <div class="dropdown">
     <select class="input custom-select" [(ngModel)]="configuration.Currency">
@@ -13,25 +13,25 @@
   </div>
 
   <div class="section-title">
-    <h4 class="title">Editors</h4>
+    <h4 class="title">Chỉnh sửa</h4>
   </div>
   <div class="btn-group">
     <button type="button" class="btn btn-default">
-      <a routerLink="/admin/manager/shipping-return">Shipping & Return</a>
+      <a routerLink="/admin/manager/shipping-return">Vận chuyển</a>
     </button>
     <button type="button" class="btn btn-default">
-      <a routerLink="/admin/manager/shipping-guide">Shipping Guide</a>
+      <a routerLink="/admin/manager/shipping-guide">Hướng dẫn giao hàng</a>
     </button>
     <button type="button" class="btn btn-default">
-      <a routerLink="/admin/manager/faq">FAQ</a>
+      <a routerLink="/admin/manager/faq">Câu hỏi thường gặp</a>
     </button>
   </div>
   <div class="section-title">
     <h4 class="title">Carousel</h4>
   </div>
   <div class="form-group">
-    <button type="submit" class="primary-btn" [disabled]="isDisabled" (click)="save()">Save</button>
-    <button routerLink='../' class="main-btn">Back</button>
+    <button type="submit" class="primary-btn" [disabled]="isDisabled" (click)="save()">Lưu</button>
+    <button routerLink='../' class="main-btn">Trở lại</button>
     <a class="pull-right">
       <button type="submit" class="primary-btn" (click)="add()" align="right">+</button>
     </a>
