--- a/OOS/src/app/admin/customer-feedback/feedback-detail/feedback-detail.component.html
+++ b/OOS/src/app/admin/customer-feedback/feedback-detail/feedback-detail.component.html
@@ -2,11 +2,11 @@
   <div class="billing-details">
       <form #editCategoryForm="ngForm">
           <div class="section-title">
-              <h3 class="title">FeedBack Detail</h3>
+              <h3 class="title">Chi tiết phản hồi</h3>
           </div>
           <div class="form-group">
 
-            content:
+            Nội dung:
 
               <input name="description" type="text" class="input"[(ngModel)]="feed.content" 
               #description_validation="ngModel" ngModel maxlength="250">
@@ -16,6 +16,6 @@
           </div>
 
       </form>
-      <button class="primary-btn" routerLink="/admin/manager/customerfeedback" routerLinkActive="active">Back</button>
+      <button class="primary-btn" routerLink="/admin/manager/customerfeedback" routerLinkActive="active">Trở lại</button>
   </div>
 </div>
