--- a/OOS/src/app/admin/editor/editor.component.html
+++ b/OOS/src/app/admin/editor/editor.component.html
@@ -7,8 +7,8 @@
   <div class="order-list" [froalaEditor] [(froalaModel)]="content"></div>
   
   <div class="pull-left">
-    <button class="primary-btn btn-save" (click)="save()">Save</button>
-    <button routerLink='/admin/manager/config' class="main-btn">Back</button>
+    <button class="primary-btn btn-save" (click)="save()">Lưu</button>
+    <button routerLink='/admin/manager/config' class="main-btn">Trở lại</button>
   </div>
 
 </div>
