--- a/OOS/src/app/admin/orders/edit-order/edit-order.component.html
+++ b/OOS/src/app/admin/orders/edit-order/edit-order.component.html
@@ -2,10 +2,10 @@
   <div class="form-row">
     <div class="form-group col-md-12">
       <div class="section-title">
-        <h3 class="title">Order information</h3>
+        <h3 class="title">Thông tin đơn hàng</h3>
       </div>
       <p>Email
-        <b>(This mail will be used to confirm your order)</b>
+        <b>(Mail này sẽ dùng để xác nhận đơn hàng)</b>
         <p>
           <input type="email" class="input" placeholder="Email" [(ngModel)]="order.Email" [ngModelOptions]="{standalone: true}">
     </div>
@@ -13,56 +13,56 @@
   <div class="form-row">
     <div class="col-md-12">
       <div class="section-title">
-        <h5 class="title">Shipping Address</h5>
+        <h5 class="title">Địa chỉ nhận hàng</h5>
       </div>
     </div>
     <div class="form-group col-md-6">
 
-      <p>Name</p>
+      <p>Tên</p>
       <input type="text" class="input" id="inputName" [(ngModel)]="order.Address[0].Name" [ngModelOptions]="{standalone: true}">
 
     </div>
     <div class="form-group col-md-6">
-      <p>Phone</p>
+      <p>Số điện thoại</p>
       <input type="text" class="input" id="inputPhone" [(ngModel)]="order.Address[0].Phone" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group col-md-4">
-      <p>Province</p>
+      <p>Tỉnh</p>
       <input type="text" class="input" id="inputPhone" [(ngModel)]="order.Address[0].Province" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group col-md-4">
-      <p>District</p>
+      <p>Huyện</p>
       <input type="text" class="input" id="inputPhone" [(ngModel)]="order.Address[0].District" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group col-md-4">
-      <p>Street</p>
+      <p>Đường</p>
       <input type="text" class="input" id="inputStreet" [(ngModel)]="order.Address[0].Street" [ngModelOptions]="{standalone: true}">
     </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-12">
       <div class="section-title">
-        <h5 class="title">Billing Address</h5>
+        <h5 class="title">Địa chỉ thanh toán</h5>
       </div>
     </div>
     <div class="form-group col-md-6">
-      <p>Name</p>
+      <p>Tên</p>
       <input type="text" class="input" id="inputName" [(ngModel)]="order.Address[1].Name" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group col-md-6">
-      <p>Phone</p>
+      <p>Số điện thoại</p>
       <input type="text" class="input" id="inputPhone" [(ngModel)]="order.Address[1].Phone" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group col-md-4">
-      <p>Province</p>
+      <p>Tỉnh</p>
       <input type="text" class="input" id="inputPhone" [(ngModel)]="order.Address[1].Province" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group col-md-4">
-      <p>District</p>
+      <p>Huyện</p>
       <input type="text" class="input" id="inputPhone" [(ngModel)]="order.Address[1].District" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group col-md-4">
-      <p>Street</p>
+      <p>Đường</p>
       <input type="text" class="input" id="inputStreet" [(ngModel)]="order.Address[1].Street" [ngModelOptions]="{standalone: true}">
     </div>
   </div>
@@ -70,7 +70,7 @@
   <div class="col-md-12">
     <div class="order-summary clearfix">
       <div class="section-title">
-        <h3 class="title">Order Details</h3>
+        <h3 class="title">Chi tiết đơn hàng</h3>
       </div>
 
       <div class="section-title-search">
@@ -90,11 +90,11 @@
         <thead>
           <tr>
 
-            <th>Code</th>
-            <th class="text-center">Product</th>
-            <th class="text-center">Price</th>
-            <th class="text-center">Quantity</th>
-            <th class="text-center">Total</th>
+            <th>Mã</th>
+            <th class="text-center">Sản phẩm</th>
+            <th class="text-center">Giá</th>
+            <th class="text-center">Số lượng</th>
+            <th class="text-center">Tổng giá</th>
             <th class="text-right"></th>
           </tr>
         </thead>
@@ -136,14 +136,14 @@
                 <!-- Modal content-->
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h4 class="modal-title">Confirm</h4>
+                    <h4 class="modal-title">Xác nhận</h4>
                   </div>
                   <div class="modal-body">
-                    <p>Are you sure you want to delete this product?</p>
+                    <p>Chắc chắn muốn xoá?</p>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-default" (click)="delete()" data-dismiss="modal">Yes</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-default" (click)="delete()" data-dismiss="modal">Có</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Không</button>
                   </div>
                 </div>
               </div>
@@ -154,10 +154,10 @@
                 <!-- Modal content-->
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h4 class="modal-title">Success</h4>
+                    <h4 class="modal-title">Thành công</h4>
                   </div>
                   <div class="modal-body">
-                    <p>You have successfully updated this order.</p>
+                    <p>Cập nhật thành công.</p>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" (click)="setBackSaved()" data-dismiss="modal">Ok</button>
@@ -170,17 +170,17 @@
         <tfoot>
           <tr>
             <th class="empty" colspan="3"></th>
-            <th>TOTAL</th>
+            <th>TỔNG GIÁ</th>
             <th colspan="2" class="total">{{order.Total | number}}</th>
           </tr>
         </tfoot>
       </table>
       <div class="pull-left">
-        <a routerLink="/admin/manager/orders" routerLinkActive="active" class="primary-btn">Back</a>
+        <a routerLink="/admin/manager/orders" routerLinkActive="active" class="primary-btn">Trở lại</a>
       </div>
 
       <div class="pull-right">
-        <button *ngIf="saved" data-toggle="modal" data-target="#myModal2" class="primary-btn" (click)="edit()">Save</button>
+        <button *ngIf="saved" data-toggle="modal" data-target="#myModal2" class="primary-btn" (click)="edit()">Lưu</button>
       </div>
       
     </div>
