--- a/OOS/src/app/admin/orders/orders.component.html
+++ b/OOS/src/app/admin/orders/orders.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-12">
   <div class="section-title">
-    <h3 class="title">Search Orders</h3>
+    <h3 class="title">Tìm đơn hàng</h3>
   </div>
   <div style="justify-content:space-between;display:flex">
     <div>
@@ -8,16 +8,16 @@
       <input type="text" id="inputEmailSearch" placeholder="Email" [(ngModel)]="email">
     </div>
     <div>
-      <label>Phone</label>
+      <label>Số điện thoại</label>
       <input type="text" id="inputPhoneSearch" placeholder="Phone" [(ngModel)]="phone">
     </div>
     <div>
-    <button class="primary-btn" style="margin-bottom:10px;" (click)="search()">Search</button>
+    <button class="primary-btn" style="margin-bottom:10px;" (click)="search()">Tìm</button>
   </div>
   </div>
 
   <div class="section-title">
-    <h3 class="title">Orders overview</h3>
+    <h3 class="title">Tổng quan Đơn hàng</h3>
   </div>
 
   <div class="pull-right">
@@ -29,11 +29,11 @@
   <table class="shopping-cart-table table table">
     <thead class="thead-dark">
       <tr>
-        <th>Order ID</th>
-        <th>User Email</th>
+        <th>ID đơn hàng</th>
+        <th>Email khách hàng</th>
         <!-- <th>Create Date</th> -->
-        <th class="text-center">Status</th>
-        <th class="text-center">Total</th>
+        <th class="text-center">Trạng thái</th>
+        <th class="text-center">Tổng giá</th>
         <th></th>
       </tr>
     </thead>
@@ -67,13 +67,13 @@
     <div class="modal-content">
       <div class="modal-body">
         <div class="section-title">
-          <h4 class="modal-title">Confirm</h4>
+          <h4 class="modal-title">Xác nhận</h4>
         </div>
-        <p>Are you sure you want to delete this record?</p>
+        <p>Chắc chắn muốn xoá?</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="primary-btn" (click)="delete()" data-dismiss="modal">Yes</button>
-        <button type="button" class="main-btn" data-dismiss="modal">Close</button>
+        <button type="button" class="primary-btn" (click)="delete()" data-dismiss="modal">Có</button>
+        <button type="button" class="main-btn" data-dismiss="modal">Thoát</button>
       </div>
     </div>
 
