--- a/OOS/src/app/admin/products/products.component.html
+++ b/OOS/src/app/admin/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-12">
   <div class="section-title">
-    <h3 class="title">List Product</h3>
+    <h3 class="title">Danh sách sản phẩm</h3>
   </div>
 
   <div class="pull-right">
@@ -12,12 +12,12 @@
   <table class="shopping-cart-table table">
     <thead>
       <tr>
-        <th class="text-center">Image</th>
-        <th class="text-center">Product</th>
-        <th class="text-center">Price(VND)</th>
-        <th class="text-center">Quantity</th>
-        <th class="text-center">Status</th>
-        <th class="text-right">Action</th>
+        <th class="text-center">Hình ảnh</th>
+        <th class="text-center">Sản phẩm</th>
+        <th class="text-center">Giá(VND)</th>
+        <th class="text-center">Số lượng</th>
+        <th class="text-center">Trạng thái</th>
+        <th class="text-right">Hành động</th>
       </tr>
     </thead>
     <tbody>
@@ -29,10 +29,10 @@
           <a routerLink="./edit/{{product.Id}}" routerLinkActive="active" class="primary-color" (click)="setId(product.Id)">{{product.Name}}</a>
           <ul>
             <li>
-              <span><strong>Code:</strong>{{product.Code}}</span>
+              <span><strong>Mã:</strong>{{product.Code}}</span>
             </li>
             <li>
-              <span><strong>Category:</strong>{{product.CategoryName}}</span>
+              <span><strong>Danh mục:</strong>{{product.CategoryName}}</span>
             </li>
           </ul>
         </td>
@@ -60,13 +60,13 @@
     <div class="modal-content">
         <div class="modal-body">
       <div class="section-title">
-        <h4 class="modal-title">Confirm</h4>
+        <h4 class="modal-title">Xác nhận</h4>
       </div>
-        <p>Are you sure you want to delete?</p>
+        <p>Chắc chắn muốn xoá?</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="primary-btn" (click)="deleteProduct()" data-dismiss="modal">Yes</button>
-        <button type="button" class="main-btn" data-dismiss="modal">Close</button>
+        <button type="button" class="primary-btn" (click)="deleteProduct()" data-dismiss="modal">Có</button>
+        <button type="button" class="main-btn" data-dismiss="modal">Thoát</button>
       </div>
     </div>
   </div>
