--- a/OOS/src/app/admin/social-network/social-network.component.html
+++ b/OOS/src/app/admin/social-network/social-network.component.html
@@ -3,11 +3,11 @@
       <form #socialForm="ngForm">
 
           <div class="section-title">
-                  <h3 class="title">Add Social Network</h3>
+                  <h3 class="title">Thêm Mạng xã hội</h3>
               </div>
               <div class="form-group">
       
-                  Address:
+                  Địa chỉ:
       
                   <input name="adress" type="text" class="input" [(ngModel)]="socialnetwork.address">
                   
