--- a/OOS/src/app/admin/users/overview-users/overview-users.component.html
+++ b/OOS/src/app/admin/users/overview-users/overview-users.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12">
 
   <div class="section-title">
-    <h3 class="title">Search Users</h3>
+    <h3 class="title">Tìm người dùng</h3>
   </div>
   <div class="row">
     <div class="col-md-4">
@@ -12,28 +12,28 @@
     </div>
     <div class="col-md-4 pull-right">
       <div class="pull-right">
-        <button class="primary-btn" (click)="searchUser()">Search</button>
-        <button class="primary-btn" (click)="refresh()">Refresh</button>
+        <button class="primary-btn" (click)="searchUser()">Tìm kiếm</button>
+        <button class="primary-btn" (click)="refresh()">Tải lại</button>
       </div>
     </div>
   </div>
 
   <div class="section-title">
-    <h3 class="title">Overview Users</h3>
+    <h3 class="title">Tổng quan Người dùng</h3>
   </div>
 
   <div class="pull-right">
     <div class="btn-group">
-      <a routerLink="../create" class="primary-btn">Create New</a>
+      <a routerLink="../create" class="primary-btn">Tạo</a>
     </div>
   </div>
 
   <table class="shopping-cart-table table table">
     <thead class="thead-dark">
       <tr>
-        <th scope="col">Username</th>
-        <th scope="col">FirstName</th>
-        <th scope="col">LastName</th>
+        <th scope="col">Tên đăng nhập</th>
+        <th scope="col">Họ</th>
+        <th scope="col">Tên</th>
         <th scope="col">Email</th>
         <th></th>
       </tr>
@@ -64,10 +64,10 @@
     <div class="modal-content">
       <div class="modal-body">
         <div class="section-title">
-          <h4 class="modal-title">Confirm</h4>
+          <h4 class="modal-title">Xác nhận</h4>
         </div>
         <p>
-          Are you sure to want to delele
+          Chắn chắn xoá không?
           <strong>{{userDel.Username}}</strong> ??
         </p>
       </div>
