--- a/OOS/src/app/shopping/account/order-history/order-history-detail/order-history-detail.component.html
+++ b/OOS/src/app/shopping/account/order-history/order-history-detail/order-history-detail.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-6">
       <div class="section-title">
-        <h3 class="title">Billing Address</h3>
+        <h3 class="title">Địa chỉ thanh toán</h3>
       </div>
       <div class="form-group">
         <label>Name: </label>
@@ -24,7 +24,7 @@
     <div class="col-md-6">
       <!-- Shipping Address -->
       <div class="section-title">
-        <h3 class="title">Shipping Address</h3>
+        <h3 class="title">Địa chỉ nhận hàng</h3>
       </div>
       <div class="form-group">
         <label>Name: </label>
@@ -46,17 +46,17 @@
     <div class="col-md-12">
       <div class="order-summary clearfix">
         <div class="section-title">
-          <h3 class="title">Order Details</h3>
+          <h3 class="title">Chi tiết đơn hàng</h3>
           <div class="pull-right idbill">{{order.IdBill}} - <span class="status">{{status[order.Status]}}</span></div>
         </div>
         <table class="shopping-cart-table table">
           <thead>
             <tr>
               <th>Product</th>
-              <th class="text-center">Price</th>
+              <th class="text-center">Giá</th>
               <th></th>
-              <th class="text-center">Quantity</th>
-              <th class="text-center">Total</th>
+              <th class="text-center">Số lượng</th>
+              <th class="text-center">Tổng giá</th>
             </tr>
           </thead>
           <tbody *ngFor="let orderDetail of order.OrderDetails">
@@ -112,9 +112,9 @@
             <div class="modal-content" *ngIf="order.Status == 0; else cantdelete">
               <div class="modal-body">
                 <div class="section-title">
-                  <h4 class="modal-title">Confirm</h4>
+                  <h4 class="modal-title">Xác nhận</h4>
                 </div>
-                <p>Are you sure you want to delete this order?</p>
+                <p>Chắc chắn muốn xoá?</p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="primary-btn" (click)="delete()" data-dismiss="modal">Yes</button>
@@ -127,12 +127,12 @@
             <div class="modal-content">
                 <div class="modal-body">
                   <div class="section-title">
-                    <h4 class="modal-title">Delete unsuccessful!</h4>
+                    <h4 class="modal-title">Đã xoá!</h4>
                   </div>
-                  <p>Your order can't be deleted because it has been confirmed!</p>
+                  <p>Đơn hàng không thể xoá vì đã được xác nhận!</p>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="primary-btn" data-dismiss="modal">Understood</button>
+                  <button type="button" class="primary-btn" data-dismiss="modal">Không hiểu</button>
                 </div>
               </div>
               </ng-template>
