--- a/OOS/src/app/shopping/account/wishlist-account/wishlist-account.component.html
+++ b/OOS/src/app/shopping/account/wishlist-account/wishlist-account.component.html
@@ -2,9 +2,9 @@
    <table class="shopping-cart-table table">
     <thead>
       <tr>
-        <th class="text-center">Image</th>
-        <th class="text-center">Product</th>
-        <th class="text-center">Price(VNĐ)</th>
+        <th class="text-center">Hình ảnh</th>
+        <th class="text-center">Sản phẩm</th>
+        <th class="text-center">Giá(VNĐ)</th>
         <th ></th>
       </tr>
     </thead>
@@ -17,10 +17,10 @@
           <a (click)="routeProduct(product)" class="primary-color" >{{product.Name}}</a>
           <ul>
             <li>
-              <span><strong>Code:</strong> {{product.Code}}</span>
+              <span><strong>Mã:</strong> {{product.Code}}</span>
             </li>
             <li>
-              <span><strong>Category:</strong> {{product.CategoryName}}</span>
+              <span><strong>Danh mục:</strong> {{product.CategoryName}}</span>
             </li>
           </ul>
         </td>
@@ -29,7 +29,7 @@
         </td>
         <td class="text-right">
           <button class="primary-btn add-to-cart" [disabled]="flagCartButton" (click)="addToCart(product)">
-            Add to cart
+            Thêm vào giỏ
           </button>
           <button class="main-btn icon-btn" data-toggle="modal" data-target="#myModal" (click)="setId(product.Id)">
             <i class="fa fa-close"></i>
@@ -38,7 +38,7 @@
       </tr>
     </tbody>
   </table>
-  <h4 *ngIf="wishListProduct.length==0">You don't have any product in wish list.</h4>
+  <h4 *ngIf="wishListProduct.length==0">Chưa có sản phẩm yêu thích.</h4>
 </div>
 
 <div class="modal fade" id="myModal" role="dialog">
@@ -47,13 +47,13 @@
     <div class="modal-content">
         <div class="modal-body">
       <div class="section-title">
-        <h4 class="modal-title">Confirm</h4>
+        <h4 class="modal-title">Xác nhận</h4>
       </div>
-        <p>Are you sure you want to remove this product from your wish list?</p>
+        <p>Chắc chắn muốn xoá?</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="primary-btn" (click)="deleteProduct()" data-dismiss="modal">Yes</button>
-        <button type="button" class="main-btn" data-dismiss="modal">Close</button>
+        <button type="button" class="main-btn" data-dismiss="modal">Thoát</button>
       </div>
     </div>
   </div>
