--- a/OOS/src/app/shopping/home-page/home-page.component.html
+++ b/OOS/src/app/shopping/home-page/home-page.component.html
@@ -29,7 +29,7 @@
 				<a class="banner banner-1" href="#">
 					<img src="/assets/img/banner10.jpg" alt="">
 					<div class="banner-caption text-center">
-						<h2 class="white-color">NEW COLLECTION</h2>
+						<h2 class="white-color">Bộ sưu tập mới</h2>
 					</div>
 				</a>
 			</div>
@@ -40,7 +40,7 @@
 				<a class="banner banner-1" href="#">
 					<img src="/assets/img/banner11.jpg" alt="">
 					<div class="banner-caption text-center">
-						<h2 class="white-color">NEW COLLECTION</h2>
+						<h2 class="white-color">Bộ sưu tập mới</h2>
 					</div>
 				</a>
 			</div>
@@ -51,7 +51,7 @@
 				<a class="banner banner-1" href="#">
 					<img src="/assets/img/banner12.jpg" alt="">
 					<div class="banner-caption text-center">
-						<h2 class="white-color">NEW COLLECTION</h2>
+						<h2 class="white-color">Bộ sưu tập mới</h2>
 					</div>
 				</a>
 			</div>
@@ -74,7 +74,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="section-title">
-					<h2 class="title">TOP NEW PRODUCT</h2>
+					<h2 class="title">SẢN PHẨM MỚI</h2>
 					<div class="pull-right">
 						<div class="product-slick-dots-2 custom-dots">
 						</div>
@@ -88,7 +88,7 @@
 			<!-- section title -->
 			<div class="col-md-12">
 				<div class="section-title">
-					<h2 class="title">TOP DISCOUNT</h2>
+					<h2 class="title">GIẢM GIÁ</h2>
 					<div class="pull-right">
 						<div class="product-slick-dots-2 custom-dots">
 						</div>
@@ -102,7 +102,7 @@
 			<!-- section title -->
 			<div class="col-md-12">
 				<div class="section-title">
-					<h2 class="title">TOP SALES</h2>
+					<h2 class="title">KHUYẾN MÃI</h2>
 					<div class="pull-right">
 						<div class="product-slick-dots-2 custom-dots">
 						</div>
