--- a/OOS/src/app/shopping/search/search.component.html
+++ b/OOS/src/app/shopping/search/search.component.html
@@ -7,7 +7,7 @@
           <h3 class="aside-title">Shop by:</h3>
           <ul class="filter-list">
             <li>
-              <span class="text-uppercase">color:</span>
+              <span class="text-uppercase">Màu:</span>
             </li>
             <li>
               <a style="color:#FFF; background-color:#8A2454;">Camelot</a>
@@ -25,7 +25,7 @@
 
           <ul class="filter-list">
             <li>
-              <span class="text-uppercase">Size:</span>
+              <span class="text-uppercase">Cỡ:</span>
             </li>
             <li>
               <a>X</a>
@@ -37,7 +37,7 @@
 
           <ul class="filter-list">
             <li>
-              <span class="text-uppercase">Price:</span>
+              <span class="text-uppercase">Giá:</span>
             </li>
             <li>
               <a>MIN: $20.00</a>
@@ -49,7 +49,7 @@
 
           <ul class="filter-list">
             <li>
-              <span class="text-uppercase">Gender:</span>
+              <span class="text-uppercase">Giới tính:</span>
             </li>
             <li>
               <a>Men</a>
@@ -210,7 +210,7 @@
               </a>
             </div>
             <div class="sort-filter">
-              <span class="text-uppercase">Sort By:</span>
+              <span class="text-uppercase">Sắp xếp theo:</span>
               <select class="input" (change)="sortAndFiltePrice()" [(ngModel)]="sort" name="sort">
                 <option value="name">Name</option>
                 <option value="price">Price</option>
