--- a/OOS/src/app/shopping/home-page/home-page.component.html
+++ b/OOS/src/app/shopping/home-page/home-page.component.html
@@ -102,7 +102,7 @@
 			<!-- section title -->
 			<div class="col-md-12">
 				<div class="section-title">
-					<h2 class="title">KHUYẾN MÃI</h2>
+					<h2 class="title">BÁN CHẠY</h2>
 					<div class="pull-right">
 						<div class="product-slick-dots-2 custom-dots">
 						</div>
